--- a/roles/config-tower/tasks/post-config-tower.yml
+++ b/roles/config-tower/tasks/post-config-tower.yml
@@ -1,5 +1,9 @@
 - name: Create Homework Assignment project 
 # Use tower module or tower-cli to create Ansible Tower project. Name of the project is specifed in ./vars/main.yml
+  tower_project:
+    name: "{{ proj_name }}" 
+    scm_type: "git"
+    scm_url: "{{ scm_url }}"
 
 - name: Machine Credentail to connect to workstation using openstack.pub
   tower_credential:
@@ -10,7 +14,9 @@
     tower_host: tower1.{{tower_GUID}}.example.opentlc.com
     tower_username: admin
     tower_password: r3dh4t1!
-    ssh_key_data: "/root/.ssh/openstack.pem"
+    #ssh_key_data: "/root/.ssh/openstack.pem"
+    ssh_key_data: "{{ lookup('file', '/root/.ssh/openstack.pem') }}"
+    ssh_key_unlock: ""
     username: cloud-user
 
 - name: Create Inventory
